force-app/main/default/objects/HolidayManagement__c/HolidayManagement__c.object-meta.xml
<CustomObject>
    <description>Custom object used to handle holiday dates and messages.</description>
    <label>Holiday Management</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>