force-app/main/default/objects/HolidayManagement__c/fields/HolidayMessage__c.field-meta.xml
<CustomField>
    <fullName>HolidayMessage__c</fullName>
    <description>Stores the holiday message that needs to appear in email notification.</description>
    <label>Holiday Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>