force-app/main/default/objects/HolidayManagement__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Stores the interval start date for holiday.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>